--- a/site/src/Bp/CoreBundle/Resources/views/Product/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Product/index.html.twig
@@ -34,10 +34,10 @@
 			
 			<div class="product-container">
 				
-				{% for product in products %}
+				{# {% for product in products %}
 				{% set data = {'product':product, 'page':'shop'} %}
 				{% include 'BpCoreBundle:components:block_product.html.twig' with data %}
-				{% endfor %}
+				{% endfor %} #}
 
 			</div>
 
