--- a/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
@@ -5,12 +5,12 @@
 
     <div class="container">
         <div class="breadcrumb">
-            <a href="#">Accueil</a>
-            <a href="#">Créer son pack</a>
-            <a href="#">Fitbit Surge</a>
+            <a href="{{ path("bp_core_default_index") }}">Accueil</a>
+            <a href="{{ path("bp_core_product_index") }}">Boutique</a>
+            <a href="{{ path("bp_core_product_show", { id:product.id }) }}">Fitbit Surge</a>
         </div>
     </div>
-    {% include 'BpCoreBundle:components:product-detail.html.twig' with {'product':product} %}
+    {% include 'BpCoreBundle:components:product-detail.html.twig' with {'product':product,'page':'shop'} %}
 
 
 
@@ -52,5 +52,9 @@
 
         </div>
     </div>
+
+    <script>
+        var ProductId = {{ product.id }};
+    </script>
 
 {% endblock body %}
