--- a/site/src/Bp/CoreBundle/Resources/views/Pack/show.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Pack/show.html.twig
@@ -37,7 +37,7 @@
         <div class="price-container">
             <div>
                 <a href="#" class="button">Je veux tester ce pack</a>   
-                <p class="price">+ {{ pack.price|ttcPrice }}</p>
+                <p class="price">+ {{ pack.price }}</p>
             </div>
         </div>
     </div>
