--- a/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
@@ -9,7 +9,7 @@
 			<h3>Résultat<span>34</span></h3>
 			<a href="#" class="button transparent reset">Réinitialiser</a>
 			<div class="category-container">
-				<a href="#">Catégory{{ icons('triangle')|raw }}</a>
+				<a href="#">Catégorie{{ icons('triangle')|raw }}</a>
 				<div class="list-category type">
 					<ul>
 						<li><a href="#" class="sport">Sport{{ icons('cross')|raw }}</a></li>
@@ -37,7 +37,7 @@
 				<div class="list-category brand">
 					<ul>
 						{% for brand in brands %}
-						<li><a href="#" class="marque">{{ brand.name }}{{ icons('cross')|raw }}r</a></li>
+						<li><a href="#" class="marque">{{ brand.name }}{{ icons('cross')|raw }}</a></li>
 						{% endfor %}
 					</ul>
 				</div>
