--- a/site/src/Bp/CoreBundle/Resources/views/components/product-detail.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/product-detail.html.twig
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 				<ul>
-					{% for photo in product  %}
+					{% for photo in product.photos  %}
 							{% if loop.index == 1 %}
 					<li class="active"><img src="{{ photo.webPath|imagine_filter("small") }}" alt=""></li>
 							{% else %}
@@ -29,7 +29,7 @@
 				<h1>{{ product.name }}</h1>
 				<h2>{{ product.brand.name }}</h2>
 				<p>{{ product.description }}</p>
-				{% if product.colors is defined %}
+				{% if product.colors is defined and product.colors|length > 0  %}
 				<h3>Couleur</h3>
 				<div class="color-container">
 					{% for color in product.colors %}
@@ -37,7 +37,7 @@
 					{% endfor %}
 				</div>
 				{% endif %}
-				{% if product.sizes is defined %}
+				{% if product.sizes is defined and product.sizes|length > 0 %}
 				<h3>Taille</h3>
 				<div class="size-container">
 					{% for size in product.sizes %}
