--- a/site/src/Bp/CoreBundle/Resources/views/Product/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Product/index.html.twig
@@ -20,7 +20,7 @@
 					<a href="{{ path("bp_core_product_show", { id:productHighlight.id }) }}" class="button">Découvrir</a>
 					<div class="price-container">
 						<a href="#" class="button">Ajouter à mon panier</a>	
-						<p class="price">{{ productHighlight.price|ttcPrice }}</p>
+						<p class="price">{{ productHighlight.price }}</p>
 					</div>
 				</div>
 			</div>
