--- a/site/web/public/css/style.css
+++ b/site/web/public/css/style.css
@@ -890,7 +890,9 @@ p {
           top: 5px;
           left: 5px; }
       .your-pack-container.sticky .product-choice .info-bull {
-        display: none; }
+        display: none;
+        margin-top: -16px;
+        margin-left: -16px; }
     .your-pack-container.sticky .button {
       position: absolute;
       right: 20px; }
@@ -2015,21 +2017,23 @@ p {
     #page-list-product .list-products .product-container .block-product:nth-child(3n+3) {
       margin-right: 0; }
 
-#page-pack-editor .top-content .pack-highlight .info .price {
-  font-size: 75px;
-  font-weight: 100;
-  color: #58c4d9;
-  position: relative; }
-  #page-pack-editor .top-content .pack-highlight .info .price span {
-    font-size: 35px;
+#page-pack-editor .top-content {
+  padding-bottom: 35px; }
+  #page-pack-editor .top-content .pack-highlight .info .price {
+    font-size: 75px;
     font-weight: 100;
-    vertical-align: top;
-    margin-top: -15px;
-    display: inline-block; }
-#page-pack-editor .top-content .pack-highlight .info h3 {
-  font-size: 13px;
-  text-transform: uppercase;
-  color: #2a2a2c; }
+    color: #58c4d9;
+    position: relative; }
+    #page-pack-editor .top-content .pack-highlight .info .price span {
+      font-size: 35px;
+      font-weight: 100;
+      vertical-align: top;
+      margin-top: -15px;
+      display: inline-block; }
+  #page-pack-editor .top-content .pack-highlight .info h3 {
+    font-size: 13px;
+    text-transform: uppercase;
+    color: #2a2a2c; }
 #page-pack-editor .list-products {
   background-color: #f5f5f5;
   padding: 60px 0; }
