--- a/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Default/index.html.twig
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="exergue">
                 {{ icons('logo_reduce')|raw }}
-                <h1>Featured products</h1>
+                <h1>Produits à la une</h1>
                 <h5>Découvrez une selection des produits phares du moment.</h5>
             </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="exergue">
                 {{ icons('logo_reduce')|raw }}
-                <h1>Featured packs</h1>
+                <h1>Pack à la une</h1>
                 <h5>Découvrez une selection des packs phares du moment.</h5>
             </div>
         </div>
