--- a/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/components/filter-product.html.twig
@@ -15,7 +15,7 @@
 						<li><a href="#" class="sport">Sport{{ icons('cross')|raw }}</a></li>
 						<li><a href="#" class="smartwatch">Smartwatch{{ icons('cross')|raw }}</a></li>
 						<li><a href="#" class="sante">Santé{{ icons('cross')|raw }}</a></li>
-						<li><a href="#" class="home">Home{{ icons('cross')|raw }}</a></li>
+						<li><a href="#" class="maison">Home{{ icons('cross')|raw }}</a></li>
 					</ul>
 				</div>
 			</div>
