--- a/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Product/show.html.twig
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="exergue">
                 {{ icons('logo_reduce')|raw }}
-                <h1>Featured products</h1>
+                <h1>Produits à la une</h1>
             </div>
         </div>
         <div class="container">
