--- a/site/src/Bp/CoreBundle/Resources/views/Pack/show.html.twig
+++ b/site/src/Bp/CoreBundle/Resources/views/Pack/show.html.twig
@@ -13,7 +13,7 @@
                 {% endif %}
             </div>
             <h1>{{ pack.name }}</h1>
-            <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Curabitur blandit tempus porttitor. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Maecenas sed diam eget risus varius blandit sit amet non magna. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+            <p>{{ pack.description }}</p>
             <div class="price-container">
                 <a href="#" class="button">Je veux tester ce pack</a>   
                 <p class="price">+ {{ pack.price }}</p>
